--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ footer {
 }
 
 #logo {
-    padding-left: 40px;
+    padding-left: 30px;
 }
 
 #logo-text {
@@ -40,7 +40,8 @@ footer {
 }
 
 #navbutton {
-    padding-right: 40px;
+    padding-right: 45px;
+    border: none;
 }
 
 .nav-item button {
@@ -51,7 +52,7 @@ footer {
     cursor: pointer;
     text-decoration: none;
     width: 120px;
-    margin-right: 40px;
+    margin-right: 30px;
     margin-left: 30px;
     margin-top: 8px;
 }
