--- a/index.css
+++ b/index.css
@@ -1,1 +1,60 @@
+#yellow-button {
+    margin-bottom: 20px;
+}
 
+h3 {
+    margin-bottom: 20px;
+}
+
+
+/* i {
+    border-radius: 5px;
+    border: 3px solid #003366;
+    color:#003366;
+    height: 250px;
+    width: 175px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+    margin-right: 50px;
+} */
+
+#icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.icon-container {  
+    align-items: vertical; 
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #003366; 
+    border-radius: 5%;  
+    padding: 10px; 
+    height: 200px;
+    width: 200px;
+  }
+  
+  .icon-container i {
+    margin-right: 5px;
+    font-size: 90px; 
+    color: #003366;
+  }
+  
+  .icon-container span {
+    font-size: 30px;
+    color: #003366;
+    text-decoration: none;
+  }
+
+ a {
+    text-decoration: none;
+ } 
+
+ h3 {
+    color: #003366;
+ }
+  
