--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 #yellow-button {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 h3 {
@@ -19,7 +19,7 @@ h3 {
     margin-right: 50px;
 } */
 
-#icons {
+/* #icons {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,10 +54,71 @@ h3 {
     font-size: 24px;
     text-decoration: none;
     color: black;
-  }
+  } */
+
+#house-icon {
+    font-size: 75px !important;
+    padding: 5px;
+    margin-bottom: -15px;
+}
 
  #icons a {
     text-decoration: none;
- } 
+}
 
+
+ #icons {
+    display: flex;
+    justify-content: space-around; 
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 40px;
+    color:#003366;
+  }
   
+  .icon-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 150px; 
+    height: 150px;
+    border: 2px solid #003366;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    color: #003366;
+    cursor: pointer; 
+    transition: all 0.3s ease;
+  }
+
+  .icon-container:hover {
+    background-color: #003366;
+    color: white;
+  }
+  
+  i {
+    font-size: 60px; 
+  }
+  
+  span {
+    margin-top: 8px;
+    font-size: 16px;
+  }
+  
+  @media (max-width: 650px) {
+    #icons {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  
+#services {
+    color:#003366;
+}
+
+#lightning {
+    font-size: 50px;
+    color:#FFD700;
+}
