spacing on contact page

--- a/contact.css
+++ b/contact.css
@@ -1,9 +1,13 @@
-#call-button {
+#call-button,
+#email-button,
+#address-button
+{
     text-decoration: none;
+    margin-bottom: 20px;
 }
 
-#email-button {
-    text-decoration: none;
+#contact-info h1 {
+    margin-top: 20px;
 }
 
 #contact-box {
@@ -24,14 +28,12 @@
     background-color: #E5E5E5;
     width: 45%;
     height: auto;
-    min-height: 85%;
     margin: 20px;
     margin-right: 40px;
 }
 
 #contact-form-box {
     width: 45%;
-    min-height: 85%;
     height: auto;
     margin-left: 40px;
 }
@@ -83,5 +85,33 @@
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 5px;
-    margin-top: -20px;
+}
+
+#contact-info i {
+    font-size: 60px;
+    color: #003366;
+}
+
+
+@media screen and (max-width: 830px) {
+    #contact-box {
+        flex-direction: column;
+        height: auto; 
+    }
+
+    #contact-info {
+        width: 90%;
+        margin: 20px;
+        height: auto;
+        min-height: none;
+    }
+
+    #contact-form-box {
+        width: 90%;
+        margin: 20px;
+        height: auto;
+        min-height: none;
+    }
+
+
 }
