--- a/index.css
+++ b/index.css
@@ -172,6 +172,7 @@
 
 @media screen and (max-width: 830px) {
     #LED {
+        display: block;
         min-height: 350px;
         height: auto;
         width: 100%;    
