--- a/about.css
+++ b/about.css
@@ -43,12 +43,17 @@
     }
   }
 
-#blue-strip {
-    width: 100%;
+  #blue-strip {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
     background-color: #003366;
     color: white;
-    padding: 20px;
-    text-align: center;
+    width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
 }
