--- a/about.css
+++ b/about.css
@@ -43,7 +43,7 @@
     }
   }
 
-  #blue-strip {
+#blue-strip {
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 30px;
@@ -56,4 +56,20 @@
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+#bio-states {
+    text-align: left;
+    margin-bottom: 0px;
+}
+
+#bio-states p {
+    text-align: left;
+    max-width: 90%;
+    margin: 10px;
+    margin-left: 50px;
+}
+
+#bio-states h4 {
+    margin-left: 35px;
 }
