annimation for main text

--- a/about.css
+++ b/about.css
@@ -142,7 +142,8 @@
     }
     #matt-pic,
     #byu-pic {
-        width: 0%;
+        width: 20%;
+        height: 20%;
     }
     #matt-text,
     #byu-text {
