--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+@keyframes appear {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1
+    }
+}
+
 html, body {
     height: 100%;
     margin: 0; 
@@ -93,6 +102,7 @@ footer #phone {
 }
 
 .image-container img {
+    max-height: 500px;
     height: auto;
     width: 100%;
     max-width: none;
@@ -106,6 +116,7 @@ footer #phone {
     color: white;
     font-size: 40px;
     font-weight: bold;
+    animation: appear 1s ease-out;
 }
 
 @media (max-width: 768px) {
