--- a/main.css
+++ b/main.css
@@ -6,6 +6,17 @@
       opacity: 1
     }
 }
+/* 
+@keyframes slideInLeft {
+    from {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  } */
 
 html, body {
     height: 100%;
