--- a/about.css
+++ b/about.css
@@ -153,16 +153,14 @@
     #matt-div,
     #byu-div {
         flex-direction: column;
-        display: block;
         min-height: 300px;
         height: auto;
         width: 100%;  
+        justify-content: center;
     }
     #matt-pic{
-        width: 80%;
+        width: 70%;
         height: auto;
-        margin: 0 auto;
-        margin-left: 10px; 
     }
     #byu-pic {
         display: none;
@@ -177,7 +175,8 @@
     }
 
     #matt-text {
-        margin-left: 20px; 
+        margin-left: 30px; 
+        max-width: 80%;
     }
 
     #byu-text {
