--- a/about.css
+++ b/about.css
@@ -150,6 +150,10 @@
 }
 
 @media screen and (max-width: 830px) {
+    #bio-states {
+        margin-left: 0px;
+    }
+
     #matt-div,
     #byu-div {
         flex-direction: column;
