--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ span {
     color:#FFD700;
 }
 
-#LED {
+#led-container {
     display: flex;
     background-color: #003366;
     width: 100%;
@@ -115,7 +115,7 @@ span {
 }
 
 @media screen and (max-width: 830px) {
-    #LED {
+    #led-container {
         display: block;
         min-height: 350px;
         height: auto;
