--- a/main.css
+++ b/main.css
@@ -115,12 +115,9 @@ footer #phone {
 
 .image-container img {
     max-height: 500px;
-    /* height: auto; */
+    height: auto;
     width: 100%;
     max-width: none;
-    object-fit: cover;
-    object-position: center;
-    height: 100vh;
 }
 
 .overlay-text {
