--- a/about.css
+++ b/about.css
@@ -97,7 +97,7 @@
 }
 
 #matt-pic,
-#about-values-pic {
+#logo-pic {
     width: 45%;
     height: 75%;
     margin: 20px;
@@ -162,7 +162,7 @@
         width: 70%;
         height: auto;
     }
-    #about-values-pic {
+    #logo-pic {
         display: none;
     }
     #matt-text,
